force-app/main/default/objects/Account_Territory_Product_Fields__c/Account_Territory_Product_Fields__c.object-meta.xml
<CustomObject>
    <label>Account Territory Product Fields</label>
    <nameField>
        <displayFormat>ATPF-{00000}</displayFormat>
        <label>Account Territory Product Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Territory Product Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>