force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Territory Product Fields</relationshipLabel>
    <relationshipName>Account_Territory_Product_Fields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>