force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Adoption__c.field-meta.xml
<CustomField>
    <fullName>Adoption__c</fullName>
    <description>Product adoption rating for this account in the territory (High, Medium, Low).</description>
    <label>Adoption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>Adopted</fullName>
                <isActive>false</isActive>
                <label>Adopted</label>
            </value>
            <value>
                <fullName>Champion</fullName>
                <isActive>false</isActive>
                <label>Champion</label>
            </value>
            <value>
                <fullName>Not Adopted</fullName>
                <isActive>false</isActive>
                <label>Not Adopted</label>
            </value>
            <value>
                <fullName>Trial</fullName>
                <isActive>false</isActive>
                <label>Trial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>