force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Loyalty__c</fullName>
    <description>Product loyalty rating for this account in the territory (High, Medium, Low).</description>
    <label>Loyalty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>