force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Penetration__c.field-meta.xml
<CustomField>
    <fullName>Penetration__c</fullName>
    <description>Number of prescriptions the HCP writes in the business-agreed periodicity for Zeta products.</description>
    <inlineHelpText>Rx volume in the agreed periodicity for Zeta products.</inlineHelpText>
    <label>Penetration</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>