force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <description>Number of prescriptions the HCP writes in the business-agreed periodicity for the therapy/indication area of focus.</description>
    <inlineHelpText>Rx volume in the agreed periodicity for the therapy/indication focus in this territory.</inlineHelpText>
    <label>Potential</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>