force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Product2_Id__c.field-meta.xml
<CustomField>
    <fullName>Product2_Id__c</fullName>
    <description>Product2 record Id (18 characters).</description>
    <inlineHelpText>Enter the 18-character Product2 record Id.</inlineHelpText>
    <label>Product</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>