force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Product_Matrix_Rating__c.field-meta.xml
<CustomField>
    <fullName>Product_Matrix_Rating__c</fullName>
    <description>Combined Adoption and Loyalty rating (e.g. HH, ML). Set automatically on save.</description>
    <label>Product Matrix Rating</label>
    <length>2</length>
    <type>Text</type>
</CustomField>