force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Rx_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Rx_Per_Week__c</fullName>
    <description>Average prescriptions per week for this product in the territory.</description>
    <label>Rx Per Week</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>