force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Target_Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Target_Visit_Frequency__c</fullName>
    <description>Target visit cadence for this product and business unit.</description>
    <label>Target Visit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>