force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Id__c</fullName>
    <description>Territory2 record Id (18 characters). Salesforce does not support custom lookups to Territory2.</description>
    <inlineHelpText>Enter the 18-character Territory2 record Id from Territory Management.</inlineHelpText>
    <label>Territory</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>