force-app/main/default/objects/Account_Territory_Product_Fields__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>System key for Account, Territory, and Product uniqueness. Populated automatically on save.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>